--- a/LMSystem/LMSystemUI/Shared/NavMenu.razor
+++ b/LMSystem/LMSystemUI/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">LMSystemUI</a>
+        <a class="navbar-brand" href="">Invoice Management</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -12,6 +12,26 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="projects" Match="NavLinkMatch.All">
+                <span class="oi oi-book" aria-hidden="true"></span> Projects
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="clients" Match="NavLinkMatch.All">
+                <span class="oi oi-person" aria-hidden="true"></span> Clients
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="invoices" Match="NavLinkMatch.All">
+                <span class="oi oi-plus" aria-hidden="true"></span> Invoices
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="items" Match="NavLinkMatch.All">
+                <span class="oi oi-book" aria-hidden="true"></span> Items
             </NavLink>
         </div>
     </nav>
