--- a/LMSystem/LMSystemUI/Shared/MainLayout.razor
+++ b/LMSystem/LMSystemUI/Shared/MainLayout.razor
@@ -3,15 +3,11 @@
 <PageTitle>LMSystemUI</PageTitle>
 
 <div class="page">
-    <div class="sidebar">
+    <div style="background-color: #23272e">
         <NavMenu />
     </div>
 
     <main>
-        <div class="top-row px-4">
-
-        </div>
-
         <article class="content px-4">
             @Body
         </article>
