--- a/LMSystem/LMSystemUI/Pages/Projects.razor
+++ b/LMSystem/LMSystemUI/Pages/Projects.razor
@@ -5,32 +5,28 @@
 @inject NavigationManager navManager
 @inject ProtectedSessionStorage sessionStorage
 
-<h3>All Projects:</h3>
-<div>
-    Search: <input type="text" placeholder="Search"
-                   aria-label="Search box"
-                   @oninput="((txt) => OnSearchInput((string)txt.Value))" />
+<h1 class="page-heading text-uppercase mb-4">All Projects:</h1>
+<div class="description-and-search-bar">
+    <input type="text" size="50" placeholder="Search All Projects"
+           aria-label="Search box"
+           @oninput="((txt) => OnSearchInput((string)txt.Value))" />
+    
+    <div>
+        <button class="new-object-button" @onclick="(() => CreateProject())">Create New Project</button>
+    </div>
 </div>
-<br />
-<div>
-    <button @onclick="(() => CreateProject())">New Project</button>
-</div>
-<br />
-<div>
+<div class="result">
     <div>
         @if (projects is not null)
         {
             <Virtualize Items="@projects" Context="s" OverscanCount="5">
-                <form>
+                <form class="result-card">
                     <fieldset>
-                        <div @onclick="(() => OpenDetails(s))">Title: @s.ProjectTitle</div>
-                        <div @onclick="(() => OpenClientDetails(s.ProjectClient))">
-                            Client Name: @s.ProjectClient.FirstName @s.ProjectClient.LastName
-                        </div>
+                        <div @onclick="(() => OpenDetails(s))">Title: <a class="card-link">@s.ProjectTitle</a></div>
+                        <div @onclick="(() => OpenClientDetails(s.ProjectClient))">Client Name: <a class="card-link">@s.ProjectClient.FirstName @s.ProjectClient.LastName</a></div>
                         <div>Status: @s.ProjectStatus</div>
                     </fieldset>
                 </form>
-                <br />
             </Virtualize>
         }
     </div>
